turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
  colore(rule(state)(r)(0))
                       ^