turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  
  var r:Int =0
  for (i<- 0 to colors.length-1){
    if (getCouleurSol()==colors(i)){   // Recherche de l'indice de la couleur du sol dans le tableau
      r=i     
    }  
  }
  colore(rule(state)(r)(0))

}

def colore(c:Color) ={
  setCouleurBrosse(c);baisseBrosse();leveBrosse()
}